tests/baselines/reference/emitClassDeclarationWithExport.errors.txt
tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithExport.ts(1,14): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithExport.ts(5,22): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== tests/cases/conformance/es6/classDeclaration/emitClassDeclarationWithExport.ts (2 errors) ====
    export class C {
                 ~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
        foo() { }
    }
    
    export default class D {
                         ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
        bar() { }
    }